[gd_scene load_steps=4 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Images/card_back.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayedCard1Placeholder" type="Sprite" parent="."]
modulate = Color( 0.952941, 0.976471, 0.745098, 1 )
position = Vector2( 572.158, 424.947 )
rotation = -0.349066
texture = ExtResource( 2 )

[node name="PlayedCard2Placeholder" type="Sprite" parent="."]
modulate = Color( 0.952941, 0.976471, 0.745098, 1 )
position = Vector2( 655.316, 332.316 )
rotation = -0.349066
texture = ExtResource( 2 )

[node name="AtontPlaceholder" type="Sprite" parent="."]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
position = Vector2( 254.737, 375.526 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="DeckPlacehoder" type="Sprite" parent="."]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
position = Vector2( 78.7368, 377.526 )
texture = ExtResource( 2 )

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 652.737 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 112.737 )
